[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/kongtext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/CharacterMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="CharacterMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectMenu" type="VBoxContainer" parent="."]
margin_left = 307.0
margin_top = 75.0
margin_right = 717.0
margin_bottom = 525.0
rect_min_size = Vector2( 410, 450 )

[node name="Scroll" type="ScrollContainer" parent="SelectMenu"]
margin_right = 410.0
margin_bottom = 414.0
rect_min_size = Vector2( 410, 414 )
scroll_horizontal_enabled = false

[node name="CharacterList" type="VBoxContainer" parent="SelectMenu/Scroll"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SelectMenu"]
margin_top = 418.0
margin_right = 410.0
margin_bottom = 443.0
custom_constants/separation = 50
alignment = 1

[node name="Back" type="Button" parent="SelectMenu/HBoxContainer"]
margin_left = 30.0
margin_right = 180.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )
custom_fonts/font = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="SelectMenu/HBoxContainer"]
margin_left = 230.0
margin_right = 380.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )
custom_fonts/font = SubResource( 1 )
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateMenu" type="VBoxContainer" parent="."]
visible = false
margin_left = 402.0
margin_top = 274.0
margin_right = 622.0
margin_bottom = 326.0

[node name="TextBar" type="LineEdit" parent="CreateMenu"]
margin_right = 220.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
align = 1
max_length = 20
placeholder_text = "Name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CreateMenu"]
margin_top = 30.0
margin_right = 220.0
margin_bottom = 52.0

[node name="Cancel" type="Button" parent="CreateMenu/HBoxContainer"]
margin_right = 108.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="CreateMenu/HBoxContainer"]
margin_left = 112.0
margin_right = 220.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="SelectMenu/HBoxContainer/Back" to="." method="_on_Back_button_up"]
[connection signal="button_up" from="SelectMenu/HBoxContainer/New" to="." method="_on_New_button_up"]
[connection signal="button_up" from="CreateMenu/HBoxContainer/Cancel" to="." method="_on_Cancel_button_up"]
[connection signal="button_up" from="CreateMenu/HBoxContainer/Accept" to="." method="_on_Accept_button_up"]
